# HeavyRT

./: .gitignore  CMakeLists.txt  README.md  gen_bat.py  main.cpp  tst_bat.py
core/: BVH2CommonLRFT.cpp  BVH2CommonLRFT.h  BVH2CommonLRFT_host.cpp  BVH2CommonLoft16RT.cpp  BVH2CommonLoft16RT.h  BVH2CommonLoft16RT_host.cpp  BVH2CommonLoftRT.cpp  BVH2CommonLoftRT.h  BVH2CommonLoftRT_host.cpp  BVH2CommonRT.cpp  BVH2CommonRT.h  BVH2CommonRTStacklessLBVH.cpp  BVH2CommonRTStacklessLBVH.h  BVH2CommonRTStacklessLBVH_host.cpp  BVH2CommonRT_host.cpp  BVH2Fat16RT.cpp  BVH2Fat16RT.h  BVH2Fat16RT_host.cpp  BVH2FatCompactRT.cpp  BVH2FatCompactRT.h  BVH2FatCompactRT_host.cpp  BVH2FatRT.cpp  BVH2FatRT.h  BVH2FatRT_host.cpp  BVH2Stackless.cpp  BVH2Stackless.h  BVH2Stackless_host.cpp  BVH4CommonRT.cpp  BVH4CommonRT.h  BVH4CommonRT_host.cpp  BVH4HalfRT.cpp  BVH4HalfRT.h  BVH4HalfRT_host.cpp  BruteForceRT.cpp  CrossRT.h  EmbreeRT.cpp  FactoryRT.cpp  NanoRT.cpp  NanoRText.h  NonunifNodeStorage.cpp  (+13 more)
core/builders/: EXT_TriBoxOverlap.cpp  EXT_TriBoxOverlap.h  FatBVH.h  FatBVHClusterize.cpp  FatBVHPrint.cpp  FatBVHReorder.cpp  cbvh.cpp  cbvh.h  cbvh_core.cpp  cbvh_core.h  cbvh_embree.cpp  cbvh_embree2.cpp  cbvh_esc.cpp  cbvh_esc2.cpp  cbvh_fat.cpp  cbvh_hlbvh.cpp  cbvh_internal.h  cbvh_split.cpp  lbvh.cpp  lbvh.h  lbvh_host.cpp  refitter.cpp  refitter.h
core/builders_tests/: CMakeLists.txt  CMakeSettings.json  bvhree_tests.h  cbvh_metrics.cpp  cbvh_metrics.h  cbvh_metrics_ray.cpp  main_tests.cpp  tests_traversal.cpp
core/common/: LiteMath.h  aligned_alloc.h  qmc_sobol_niederreiter.cpp  qmc_sobol_niederreiter.h
examples/: IRenderer.h  RenderFactory.cpp  gltf_data.h
examples/01_eye_rays/: eye_ray.cpp  eye_ray.h  eye_ray_host.cpp
examples/02_rtao/: rtao.cpp  rtao.h  rtao_host.cpp
examples/loader/: cmesh.cpp  cmesh.h  gltf_loader.cpp  gltf_loader.h  hydraxml.cpp  hydraxml.h
scenes/meshes/: cone_low.vsgf  cube.vsgf  helix_mid.vsgf  pyramid.vsgf  torus18.vsgf  triangle.vsgf
